# humanize-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/humanize_mcp/: __init__.py  config.py  deep_scan.py  detection.py  presets.py  prompts.py  server.py
src/humanize_mcp/providers/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  openai_provider.py
tests/: _smoke_mcp.py  test_detection.py  test_presets.py
