[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanize-mcp"
version = "0.1.0"
description = "MCP server: heuristic AI-tells detection, optional SLM deep scan, and humanized rewrite via Anthropic / OpenAI / Bedrock. Made by Oliver Rochford / Aunoo AI."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Oliver Rochford", email = "oliver.rochford@gmail.com" }]
maintainers = [{ name = "Aunoo AI" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
humanize-mcp = "humanize_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
